--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2>Share your Tribute</h2>
             <p>If you'd like to share a memory or message about my dad, please write it below:</p>
 
-            <form id="tribute-form">
+            <form action="https://formspree.io/f/mdkpngng" method="POST">
                 <div class="form-group">
                     <label for="name">Your name:</label><br>
                     <input type="text" id="name" name="name" placeholder="Enter your name" required>
