--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </footer>
         <script src="script.js"></script>
         <script>
-            const form = document.querySelector("form");
+            const form = document.querySelector("#contact form");
             form.addEventListener("submit", async (e) => {
                 e.preventDefault();
                 const data = new FormData(form);
